🐛 Fix #157 — Fix logout button color on mobile view

--- a/themes/default/public/css/lufi.css
+++ b/themes/default/public/css/lufi.css
@@ -248,6 +248,12 @@ button.pulse {
   }
 }
 
+.side-nav .btn-flat {
+    color: #444 !important;
+    padding: 0 1rem;
+    text-transform: initial !important;
+}
+
 .white-background {
     background-color: #FFF;
 }
